src/test/scala/wacc/wacc_examples/invalid/syntaxErr/function/tail_recursive_functions/annotationBeforeVar.wacc
begin
    @tailrec
    int x = 5
end